--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello World</title>
+        <title>GANG</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>GANG</h1>
     </body>
 </html>
