--- a/someCss.html
+++ b/someCss.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>dis my builder #2</title>
-        <link rel="stylesheet"
+        <link rel="stylesheet" type="text/css"
             href="anExternal.css">
         <style>
             p.one {
